--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-handler": "^1.1.4",
     "mongoose": "^5.11.15",
     "react-redux": "^7.2.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
