--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^5.3.0",
     "express-async-handler": "^1.1.4",
     "mongoose": "^5.11.15",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
