--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.3.0",
     "express-async-handler": "^1.1.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.2",
