--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-lottie": "^1.2.3",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
