--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node backend/server",
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend/veganizza-app",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend/veganizza-app && npm run build --prefix frontend/veganizza-app"
   },
   "author": "",
   "license": "ISC",
