--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^5.3.0",
     "dateformat": "^4.5.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
