--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend/veganizza-app",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend/veganizza-app && npm run build --prefix frontend/veganizza-app"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm install --prefix frontend/veganizza-app && npm run build --prefix frontend/veganizza-app"
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "14.15.3"
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
@@ -35,8 +38,5 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
-  },
-  "engines": {
-    "node": "14.15.3"
   }
 }
