This is a combination of 3 commits.
p.json

change ver

bump ver

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "veganizza",
-  "version": "1.0.0",
+  "name": "veganizzaa",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "type": "module",
